--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             width: 100%;
         }
         .menu h1 {
+            white space: nowrap
             font-family: 'Rock Salt', cursive;
             font-size: 2.5em;
             margin-bottom: 20px;
