--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🪕🎶 Raven's Song List 🪕🎶</title>
+    <title>🎶 Raven's Song List 🎶 </title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&family=Roboto:wght@300;400;700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
@@ -28,7 +28,7 @@
             width: 100%;
         }
         .menu h1 {
-            white space: nowrap
+            white-space: nowrap
             font-family: 'Rock Salt', cursive;
             font-size: 2.5em;
             margin-bottom: 20px;
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="menu">
-        <h1>🪕🎶 Raven's Song List 🪕🎶</h1>
+        <h1>🎶 Raven's Song List 🎶</h1>
         <div class="section">
             <h2>Originals</h2>
             <ul class="song-list">
