--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                 <li>The Night We Met- Lord Huron (verse/chorus)</li>
                 <li>Sweater Weather- The Neighbourhood (verse/chorus)</li>
                 <li>I'm Yours - Jason Mraz</li>
+                <li>Hey Soul Sister-Train </li>
+                <li>Valarie- Amy Winehouse</li>
+                <li>Viva La Vida- Cold Play</li>
                 <li>Yellow- Coldplay (Goal)</li>
                 <li>Riptide- Vance Joy (Goal)</li>
             </ul>
