--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-attachment: fixed;
             background-color:#000000;
             text-align: center;
-            padding: 20px;
+            padding: 0px;
             margin: 0;
         }
         .menu {
@@ -25,6 +25,7 @@
             display: inline-block;
             margin-top: 20px;
             max-width: 800px;
+            width: 100%;
         }
         .menu h1 {
             white-space: nowrap
