--- a/index.html
+++ b/index.html
@@ -4,63 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎶 Raven's Song List 🎶 </title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&family=Roboto:wght@300;400;700&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&family=Roboto:wght@300;400;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-size: cover;
-            background-attachment: fixed;
-            background-color:#000000;
-            text-align: center;
-            padding: 0px;
-            margin: 0;
-        }
+    body {
+        font-family: 'Poppins', sans-serif;
+        background-size: cover;
+        background-attachment: fixed;
+        background-color: #000000;
+        text-align: center;
+        padding: 10px; /* Adjusted padding */
+        margin: 0;
+    }
+    .menu {
+        background-color: #ffffff;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+        display: inline-block;
+        margin-top: 20px;
+        max-width: 95%; /* Adjusted max-width */
+        width: 100%;
+        overflow: hidden; /* Prevents horizontal scrolling */
+    }
+    .menu h1 {
+        font-family: 'Rock Salt', cursive;
+        font-size: 2em; /* Adjusted font size */
+        margin-bottom: 15px; /* Adjusted margin */
+        color: #2c3e50;
+    }
+    .section {
+        margin-bottom: 20px; /* Adjusted margin */
+    }
+    .section h2 {
+        margin-bottom: 10px; /* Adjusted margin */
+        text-decoration: underline;
+        font-size: 3.5vw; /* Responsive font size */
+        color: #34495e;
+    }
+    .song-list {
+        list-style-type: none;
+        padding-left: 0;
+        text-align: left; /* Center text on mobile */
+    }
+    .song-list li {
+        background: #37A2B3;
+        margin: 8px 0; /* Adjusted margin */
+        padding: 8px; /* Adjusted padding */
+        font-size: 1.5vw; /* Responsive font size */
+        border-radius: 5px;
+        transition: background 0.3s ease, transform 0.3s ease;
+    }
+    .song-list li:hover {
+        background: #37a2b3;
+        transform: scale(1.05);
+    }
+
+    @media (max-width: 600px) {
         .menu {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-            display: inline-block;
-            margin-top: 20px;
-            max-width: 800px;
-            width: 100%;
+            padding: 5px; /* Further reduced padding for smaller screens */
         }
         .menu h1 {
-            white-space: nowrap
-            font-family: 'Rock Salt', cursive;
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            color: #2c3e50;
-        }
-        .section {
-            margin-bottom: 30px;
+            font-size: 1.5em; /* Adjusted font size */
         }
         .section h2 {
-            margin-bottom: 15px;
-            text-decoration: underline;
-            font-size: 5.0 em;
-            color: #34495e;
-        }
-        .song-list {
-            list-style-type: none;
-            padding-left: 0;
-            text-align: middle;
+            font-size: 5vw; /* Adjusted font size for smaller screens */
         }
         .song-list li {
-            background: #37A2B3;
-            margin: 10px 0;
-            padding: 10px;
-            font-size: 1.2em;
-            border-radius: 5px;
-            transition: background 0.3s ease, transform 0.3s ease;
+            font-size: 3vw; /* Adjusted font size for smaller screens */
         }
-        .song-list li:hover {
-            background: #37a2b3;
-            transform: scale(1.05);
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
     <div class="menu">
