--- a/FAQ.html
+++ b/FAQ.html
@@ -105,7 +105,7 @@
         </div>
         <div class="faq">
             <h2>How long has Raven been doing music?<i class="fas fa-chevron-down"></i></h2>
-            <p> Raven began singing when she was 3 years old by signing along with her iPod nano in her mom's car. This is when she began learning to control pitch and match pitch. January of 2024, Raven went through a terrible breakup, so she began writing music and playing ukelele.</p>
+            <p> Raven began singing when she was 3 years old by signing along with her iPod nano in her mom's car. January of 2024, Raven went through a terrible breakup, so she began writing music and playing ukelele.</p>
         </div>
         <div class="faq">
             <h2>What is Raven's favorite song to play? <i class="fas fa-chevron-down"></i></h2>
