--- a/FAQ.html
+++ b/FAQ.html
@@ -97,7 +97,7 @@
         <h1>Frequently Asked Questions</h1>
         <div class="faq">
             <h2>Is Raven a boy or girl? <i class="fas fa-chevron-down"></i></h2>
-            <p>Raven is a transgender female using she/her pronouns.</p>
+            <p>Raven is a transgender female using she/they pronouns.</p>
         </div>
         <div class="faq">
             <h2>How old is Raven? <i class="fas fa-chevron-down"></i></h2>
@@ -113,7 +113,7 @@
         </div>
         <div class="faq">
             <h2>Where is Raven from? <i class="fas fa-chevron-down"></i></h2>
-            <p>Raven is from Massachusetts. She currently lives in Stockton, California.</p>
+            <p>Raven is from Plainville, Massachusetts. She currently lives in Stockton, California.</p>
         </div>
          <div class="faq">
             <h2>Does Raven have her own songs? <i class="fas fa-chevron-down"></i></h2>
